--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>スロットプログラム</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <style>
+    body, html {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
 </head>
 <body>
   <script src="sketch.js"></script>
 </body>
 </html>
+
