--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>スロットプログラム</title>
+  <title>スロット＆加速度センサー</title>
+  <!-- p5.jsの読み込み -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <style>
-    body, html {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    canvas {
-      display: block;
-    }
-  </style>
 </head>
 <body>
+  <h1>スロットと加速度センサーモード</h1>
+  <p>モードを切り替えてスロットと加速度センサーの機能をお試しください。</p>
+  
+  <!-- スロットと加速度センサーのプログラムを読み込む -->
   <script src="sketch.js"></script>
 </body>
 </html>
-
