--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>スロット</title>
   <!-- p5.jsの読み込み -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <style>
+    /* 全体を中央に配置 */
+    body, html {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0; /* 背景色を薄いグレーに */
+    }
+    canvas {
+      border: 1px solid #ccc; /* キャンバスに境界線を付ける */
+    }
+  </style>
 </head>
 <body>
   <!-- スロットのプログラムを読み込む -->
